[package]
name = "copper-launcher"
version = "0.1.0"
edition = "2024"

authors = ["Suverent-Shiro"]
description = "Copper Launcher is a GTK based launcher for Minecraft written in Rust."

license = "GPL-3.0"
license-file = "LICENSE"


[dependencies]
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
gdk = "0.18.2"
gdk4 = "0.10.3"
gio = "0.21.5"

reqwest = { version = "0.13.2", features = ["json", "blocking"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

tokio = "1.49.0"